<resources>
    <string name="app_name">JonsApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_conversation">New Conv</string>

    <string name="error_message">Problem getting data</string>
    <string name="error_message_records">No records found</string>

    <string name="msgs_image_view_cd">Msgs Image View</string>
    <string name="search_bar_search_by_content_hint">"Search by content&#8230;"</string>

    <string name="title_activity_conversations">Conversations</string>
    <string name="title_activity_msgs">Msgs</string>
    <string name="title_activity_contacts">Contacts</string>

    <string name="conversations_search_item_title">Conversations Search</string>
    <string name="conversations_search_by_title_hint">"Search by title&#8230;"</string>
    <string name="conversations_default_unread_count">"0"</string>

    <string name="main_button_title">"Please select from the following options: "</string>
    <string name="main_button_conversations">Conversations</string>
    <string name="main_button_contacts">Contacts</string>

    <string name="new_conversation_title">"Enter title: "</string>
    <string name="new_conversation_button_title">Press button to add contact to conversation</string>
    <string name="new_conversation_button_cd">Add contact</string>
    <string name="new_conversation_contacts_title">"Contacts added: "</string>

    <string name="notification_new_msg_received">New Message!</string>

    <string name="send_msg">Send</string>

    <string name="client_detail_tel_type_mobile">Mobile</string>
    <string name="client_detail_tel_type_home">Home</string>
    <string name="client_detail_tel_type_work">Work</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
