<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.jraw.android.jonsapp.MainActivityFragment"
                tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/main_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_title"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/main_button_title"
        android:id="@+id/main_button_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_contacts"
        android:onClick="onContacts"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/main_button_title"
        android:layout_toEndOf="@+id/main_button_contacts"
        android:layout_toRightOf="@+id/main_button_contacts"
        android:id="@+id/main_button_conversations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_conversations"
        android:onClick="onConversations"/>

</RelativeLayout>
